--- a/pages/index.css
+++ b/pages/index.css
@@ -5,8 +5,8 @@
 @import '../blocks/navigation/navigation.css';
 
 .body{
-    width: 100vw;
-    height: 100vh;
+    width: 1024px;
+    height: 768;
     display: flex;
     position: relative;
     scroll-snap-type: both mandatory;
